# Portfolio-focused-on-Data-Science-

./: README.md  main.py  pyproject.toml
notebooks/: Customer Churn Prediction.ipynb  Telecom Customer Churn Prediction.ipynb
