[project]
name = "business-focus-data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.2.0",
    "matplotlib>=3.8.0",
    "numpy>=2.0.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.0",
]
